--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header class="header">
       <h1 class="header__h1">
-        <span class="nowrap"><a href="#">Nico Díaz Aguilar</a></span>
+        <span class="nowrap"><a href="#">Nico Diaz-Aguilar</a></span>
       </h1>
       <nav class="header__nav">
         <ul class="header__ul">
